src/test/deca/context/valid/return/return_from_nested_if.deca
// Description :
// Return dans blocs if imbriqués
//
// Resultats :
// ok

class D {
    int f(int a) {
        if(a > 0) {
            if(a < 10) return 1;
            else return 2;
        } else return 0;
    }
}
