src/test/deca/context/invalid/return/return_missing_in_branch_custom.deca
// Description :
// return manquant dans une branche if/else
//
// Resultats :
// Erreur contextuelle
// Ligne 6 : return non garanti

class A {
    int f(boolean b) {
        if (b) {
            return 1;
        } // else pas de return
    }
}
